--- a/app/coursify-ai/static/styleMyCon.css
+++ b/app/coursify-ai/static/styleMyCon.css
@@ -595,3 +595,10 @@ button[type="submit"] {
   background-color: #7d7a7a;
   border-left: 5px solid #1abc9c;
 }
+
+html,
+body,
+* {
+  scrollbar-width: none; /* For Firefox */
+  -ms-overflow-style: none; /* For Internet Explorer and Edge */
+}
